[gd_scene load_steps=4 format=3 uid="uid://box6p37p5fylf"]

[ext_resource type="Script" path="res://scripts/tic_tac_toe.gd" id="1_onoxq"]
[ext_resource type="Texture2D" uid="uid://5jouq5o4dtgf" path="res://assets/textures/bg/panel_beigeLight.png" id="2_hk55f"]
[ext_resource type="Texture2D" uid="uid://nyy7p55wgoas" path="res://assets/textures/bg/panel_brown.png" id="2_wc0jm"]

[node name="TicTacToe" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_onoxq")

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hk55f")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 220.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wc0jm")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 3

[node name="DrawModal" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="VBoxContainer" type="VBoxContainer" parent="DrawModal"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -177.0
offset_right = 231.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResultLabel" type="Label" parent="DrawModal/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "You ended on a draw"
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="DrawModal/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Reset"

[node name="ReturnButton" type="Button" parent="DrawModal/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Continue"

[connection signal="pressed" from="DrawModal/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="DrawModal/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
